# Chetna

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CODE_CLEANUP_SUMMARY.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile  GITHUB_UPDATE_SUMMARY.md  INTEGRATIONS.md  LICENSE  NOTICE.md  PERFORMANCE_TEST_REPORT.md  README.md  REFACTORING_SUMMARY.md  SPEC.md  TRADEMARK.md  UPGRADE_SUMMARY.md  chetna.sh  docker-compose.yml  install.sh  launch.cmd  launch.sh  session.json  test_performance.sh
.github/workflows/: docker.yml
docs/: LICENSE-RESPONSES.md  LICENSE-SUMMARY.md  QUICKSTART.md  RELEASE-NOTES.md  SPEC.md  TURBOQUANT.md  VERIFICATION.md  WHATS-NEXT.md  agent-integration.md  api.md  linkedin-post.md  manual.md  mcp.md  reddit-post.md  social-posts.md
plugins/: README.md
plugins/claude-code/: README.md
plugins/claude-code/.claude-plugin/: plugin.json
plugins/claude-code/commands/: stats.md
plugins/cursor/.cursor-plugin/: plugin.json
plugins/cursor/commands/: recall.md  remember.md  search.md
plugins/cursor/skills/: memory.md
plugins/vscode/: README.md
plugins/windsurf/: README.md  mcp_config.json
plugins/zed/: README.md
sdk/python/: chetna.py  setup.py
sdk/python/chetna/: __init__.py
sdk/python/chetna_sdk/: __init__.py
src/: config.rs  config_file.rs  lib.rs  main.rs  scheduler.rs
src/api/: auth.rs  config.rs  config_api.rs  error.rs  history.rs  memory.rs  mod.rs  procedure.rs  session.rs  skill.rs  stats.rs
src/cache/: mod.rs  query_cache.rs
src/consolidate/: mod.rs
src/db/: brain.rs  embedding.rs  mod.rs  relationships.rs  search.rs
src/history/: mod.rs
src/mcp/: mod.rs
src/multimodal/: mod.rs
src/shared/: mod.rs
src/web/: history.rs  mod.rs
tests/: basic_test.rs  test_turboquant.rs
